Bug 1319764 - Ensure Gtk window unmap workaround is actually used. r=karlt

We were miscounting the number of manual configure events which we
needed to send gtk as the workaround for bug 1225044, causing it not
to work in some cases. This is because configure events can come from
more sources than were counting.

Decrement mPendingConfigures only as far as zero, like
configure_request_count in gtk_window_configure_event().

MozReview-Commit-ID: GxpR2Zozxor